background validation, readme update, a few bugfixes

--- a/config.json
+++ b/config.json
@@ -8,6 +8,31 @@
   "name": "bengoshi test server",
   "description": "pls connect",
   "motd": "anime ass",
+  "backgrounds": [
+    "Anime",
+    "Christmas",
+    "CountyCourt",
+    "CruiseCourt",
+    "DGSEnglishCourt",
+    "DGSJapanCourt",
+    "DualDestinies",
+    "EnglishCourt",
+    "GS4Night",
+    "HD",
+    "Khura'in",
+    "NewCourt",
+    "RuinedCourt",
+    "Sky",
+    "SpaceCourt",
+    "Themis",
+    "TouhouCourt",
+    "WitchTrialCourt",
+    "Zetta",
+    "birthday",
+    "default",
+    "gs4",
+    "mlp"
+  ],
   "rooms": [
     {
       "name": "Lobby",
