--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "AO2 Server",
   "main": "Server.js",
   "dependencies": {
+    "ini": "^1.3.5",
     "js-yaml": "^3.12.0"
   },
   "devDependencies": {},
