--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "AO2 Server",
   "main": "Server.js",
   "dependencies": {
-    "ini": "^1.3.5",
+    "ini-parser": "0.0.2",
     "js-yaml": "^3.12.0"
   },
   "devDependencies": {},
