--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "bengoshi",
   "version": "1.0.0",
   "description": "AO2 Server",
-  "main": "Server.js",
   "dependencies": {
     "ini-parser": "0.0.2",
     "js-yaml": "^3.12.0"
@@ -10,7 +9,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node Server.js"
   },
   "repository": {
     "type": "git",
